# daemonmake

./: .gitignore  CMakeLists.txt  README.md
apps/: daemonmake_main.cpp
examples/sandbox_project/: CMakeLists.txt
examples/sandbox_project/.daemonmake/: config.json
examples/sandbox_project/apps/: app1.cpp
examples/sandbox_project/include/sandbox_project/: top.hpp
examples/sandbox_project/include/sandbox_project/util/: u.hpp
examples/sandbox_project/src/: mainlib.cpp
examples/sandbox_project/src/core/: a.cpp
examples/sandbox_project/src/util/: u.cpp
include/daemonmake/: build_queue.hpp  cmake_builder.hpp  commands.hpp  config.hpp  daemon.hpp  file_watcher.hpp  project.hpp
src/: build_queue.cpp  cmake_builder.cpp  commands.cpp  config.cpp  daemon.cpp  file_watcher.cpp  project.cpp
